dockerfile and index.html updated

--- a/web/main/templates/index.html
+++ b/web/main/templates/index.html
@@ -7,7 +7,8 @@
 <body>
 <div>
     <h1>Welcome to Bottle of Dice</h1>
-    <p>A blog about role-playing games, the fantasy fiction that inspires them, and the tools required to play them</p>
+    <p>A blog about role-playing games, the fantasy fiction that inspires them, and the damn tools required to play them</p>
+    
 </div>
 </body>
 </html>
